--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.1.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.games</groupId>
-	<artifactId>dslist</artifactId>
+	<groupId>dslistDevSuperior</groupId>
+	<artifactId>games</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>dslist</name>
-	<description>Intensivão Java Spring</description>
+	<name>games</name>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
